--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,7 +40,7 @@ jobs:
       # Step 6: Deploy build to FTP server (if needed)
       - name: Deploy build to FTP server
         run: |
-          lftp -u username,password ftp://your.ftp.server <<EOF
+          lftp -u username,password ftp://139.59.101.247 <<EOF
           mirror -R build /path/to/remote/directory
           bye
           EOF
